Bug 601009 - TM: allow for guards that always exit.  r=dmandelin.